Prevent extra whitespace between analysis results

--- a/css/_analysis.scss
+++ b/css/_analysis.scss
@@ -50,7 +50,7 @@ li.score {
 		display: inline-block;
 		float: left;
 		width: 33px;
-		height: 28px;
+		min-height: 1px;
 	}
 }
 
